--- a/src/app/lines/view-example/view-example.component.html
+++ b/src/app/lines/view-example/view-example.component.html
@@ -19,5 +19,5 @@
   <button mat-raised-button
           color="primary"
           (click)="animateOut()"
-          [@buttonState]="animationState">Next</button>
+          [@buttonState]="buttonAnimationState">Next</button>
 </section>
