--- a/src/app/lessons/view-lesson/view-lesson.component.css
+++ b/src/app/lessons/view-lesson/view-lesson.component.css
@@ -2,14 +2,22 @@
   margin: 0px;
 }
 
-.lesson-frame {
+.lesson-frame, .title-frame {
   width: 100%;
-  height: 400px;
+  height: 500px;
   margin: 0px;
-  background-color: #fff;
+
   display: flex;
   flex-direction: column;
   text-align: center;
+}
+
+.title-frame {
+  background-color: #006fde;
+}
+
+.lesson-frame {
+  background-color: #fff;
 }
 
 .present-text {
@@ -22,5 +30,64 @@
 }
 
 .push-down {
+  height: 100%;
+}
+
+.title-content {
+  height: 400px;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  position: relative;
+  margin: 0px;
+}
+
+.lesson-title {
+  color: white;
+  text-align: left;
+  margin: 100px 60px 10px 60px;
+  font-size: 3em;
+  z-index: 1;
+}
+
+.lesson-objective {
+  color: white;
+  text-align: left;
+  margin: 0px 60px;
+  font-size: 12pt;
+  z-index: 1;
+}
+
+.begin-lesson-button {
+  background-color: #1c0b6d;
+  color: white;
+  border: none;
+  border-radius: 25px;
+  height: 50px;
+  width: 150px;
+  font-size: 16px;
+  margin: 60px;
+  cursor: pointer;
+}
+
+.back-button {
+  color: white;
+  margin: 30px 20px;
+}
+
+.previous-line-button {
+  color: black;
+  margin: 30px 20px;
+}
+
+.illustration {
+  width: 300px;
+  height: 300px;
+  position: absolute;
+  right: 0px;
+  bottom: 0px;
+}
+
+.illustration img {
   height: 100%;
 }
