--- a/src/app/lines/view-explanation/view-explanation.component.css
+++ b/src/app/lines/view-explanation/view-explanation.component.css
@@ -1,15 +1,34 @@
-.lesson-content {
-  min-height: 250px;
-  display: flex;
-  flex-direction: column;
-  text-align: center;
+.present-text {
+  font-size: 36px;
+  margin: 40px;
 }
 
-.present-text {
-  font-size: 24px;
-  margin: 20px;
+.subtitle-text {
+  font-size: 18px;
+  padding: 0px 100px;
 }
 
 .question-option {
   margin: 10px;
+}
+
+.line-content {
+  position: relative;
+  height: 300px;
+}
+
+.next-button {
+  position: absolute;
+  bottom: 10px;
+  background-color: white;
+  border: 2px #006fde solid;
+  border-radius: 25px;
+  height: 50px;
+  width: 100px;
+  font-size: 18px;
+  color: #006fde;
+  left: 0;
+  right: 0;
+  margin: auto;
+  cursor: pointer;
 }
