--- a/src/app/lines/add-line/add-line.component.html
+++ b/src/app/lines/add-line/add-line.component.html
@@ -44,7 +44,7 @@
         placeholder="MP3 File"
         name="audioMp3"
         id="audioMp3"
-        (change)="fileEvent($event)">
+        (change)="onFileUpload($event)">
     </div>
     <mat-form-field *ngIf="selectedLineType=='Example'">
       <mat-select
