--- a/src/app/lines/view-free-answer/view-free-answer.component.html
+++ b/src/app/lines/view-free-answer/view-free-answer.component.html
@@ -1,4 +1,4 @@
-<section class="line-content">
+<section class="line-content" *ngIf="line.answer">
   <div class="present-text"
        [@primaryTextState]="textAnimationState">
     <span>{{line.prompt}}</span>
