--- a/src/app/lines/line-list/line-list.component.html
+++ b/src/app/lines/line-list/line-list.component.html
@@ -1,17 +1,16 @@
 <section *ngIf="selectedLesson" class="mat-typography">
   <div *ngFor="let line of selectedLesson.lines; let i = index" class="line-container">
     <div class="line-options">
-      <span [style.opacity]="i > 0 ? '1' : '.2'" (click)="moveLineUp(i)">⬆️</span>
-      <span [style.opacity]="i < selectedLesson.lines.length - 1 ? '1' : '.2'" (click)="moveLineDown(i)">⬇️</span>
+      <span [style.opacity]="i > 0 ? '1' : '.2'" (click)="moveLine(i, 1)">⬆️</span>
+      <span [style.opacity]="i < selectedLesson.lines.length - 1 ? '1' : '.2'" (click)="moveLine(i, -1)">⬇️</span>
       <span (click)="deleteLine(i)">❎</span>
     </div>
     <div class="line-number">{{i + 1}} </div>
     <div class="line-content">
       <span class="line-type">{{line.type}}</span>
-      <span *ngIf="line.type=='Explanation'">{{line.explanationAudioScript}}</span>
-      <span *ngIf="line.type=='Example'">{{line.exampleTarget}} | </span>
-      <span *ngIf="line.type=='Example'">{{line.exampleEnglish}} </span>
-      <span *ngIf="line.type=='Multiple Choice'">{{line.mcQuestion}}</span>
+      <span *ngIf="line.type === 'Explanation'">{{line.explanationAudioScript}}</span>
+      <span *ngIf="line.type === 'Free Answer'">{{line.freePrompt}} => </span>
+      <span *ngIf="selectedLessonAssets[i].vocabulary">{{selectedLessonAssets[i].vocabulary.target}}</span>
     </div>
   </div>
   <br>
