--- a/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin-dashboard/admin-dashboard.component.html
@@ -3,5 +3,6 @@
   <div fxLayout="row">
     <a routerLink="lessons"><mat-card class="admin-card">Lessons</mat-card></a>
     <a routerLink="vocabulary"><mat-card class="admin-card">Vocabulary</mat-card></a>
+    <a routerLink="objectives"><mat-card class="admin-card">Objectives</mat-card></a>
   </div>
 </section>
