Objective List with dummy data

--- a/src/app/vocab/view-vocab/view-vocab.component.html
+++ b/src/app/vocab/view-vocab/view-vocab.component.html
@@ -1,7 +1,7 @@
 <section class="edit-vocab-form mat-typography"
          fxLayout="column"
          fxLayoutAlign="center center">
-  <form (ngSubmit)="onSubmitForm()" [formGroup]="vocabForm">
+  <form (ngSubmit)="onSaveVocabulary()" [formGroup]="vocabForm">
     <fieldset>
       <div>
         <label for="target">Target</label>
