--- a/src/app/objectives/view-task/view-task.component.css
+++ b/src/app/objectives/view-task/view-task.component.css
@@ -30,3 +30,40 @@ mat-form-field {
   margin: 0 10px;
   font-family: 'Helvetica', 'Arial', sans-serif;
 }
+
+.slot {
+  background-color: #ddd;
+  font-weight: bold;
+  margin-right: 5px;
+  padding: 2px 10px;
+  border-radius: 12px;
+  font-size: 11px;
+  vertical-align: 2px;
+}
+
+.task-name {
+  margin-bottom: 0;
+}
+
+.pattern-preview {
+  margin: 5px;
+}
+
+.pattern-item {
+  background-color: #eee;
+  padding: 1px 10px;
+  margin-left: 20px;
+  border: 1px #ddd solid;
+  margin-right: -5px;
+  margin-bottom: 10px;
+  cursor: pointer;
+}
+
+.pattern-item mat-form-field {
+  width: 360px;
+}
+
+.static {
+  margin-right: 5px;
+}
+
