--- a/src/app/objectives/view-task/view-task.component.html
+++ b/src/app/objectives/view-task/view-task.component.html
@@ -25,6 +25,7 @@
         type="button"
         (click)="addPatternItem()">Add Pattern Item</button>
     </div>
+    <hr />
+    <button mat-raised-button color="accent" routerLink="/challenge/{{selectedObjective.id}}/{{selectedTask.id}}">Challenge Task</button>
   </div>
-  <router-outlet></router-outlet>
 </section>
