Craete player which queues and initializes different content types

--- a/src/app/lines/view-example/view-example.component.html
+++ b/src/app/lines/view-example/view-example.component.html
@@ -23,7 +23,5 @@
     <span>{{vocab.english}}</span>
   </div>
   <br />
-  <button class="next-button"
-          (click)="animateOut()"
-          [@buttonAnimationState]="buttonAnimationState">Next</button>
+  <app-standard-button (click)="animateOut()">Next</app-standard-button>
 </section>
